fix: hero background image not covering

--- a/components/atoms/HeroBackground/HeroBackground.module.css
+++ b/components/atoms/HeroBackground/HeroBackground.module.css
@@ -1,12 +1,13 @@
 .imageContainer {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: auto;
 }
 
 .backgroundImage {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .overlay {
